Add a stationary turret enemy
This enemy doesn't do anything at the moment, except deliver 10 damage to the player when they collide. Incidentally, the player dies IMMEDIATELY, because there are no invulnerability frames (I'll be adding that soon).

--- a/MegaManLofi/MegaManLofi.vcxproj
+++ b/MegaManLofi/MegaManLofi.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="ArenaTile.h" />
     <ClInclude Include="ConditionalInfo.h" />
     <ClInclude Include="ConditionOp.h" />
+    <ClInclude Include="EnemyInfo.h" />
     <ClInclude Include="EntityBehavior.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="ConsoleAnimationRepository.h" />
